# django-cte

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pkg-requires.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: pypi.yml  tests.yml
django_cte/: __init__.py  cte.py  expressions.py  jitmixin.py  join.py  meta.py  query.py  raw.py
docs/: _config.yml  index.md
tests/: __init__.py  conftest.py  django_setup.py  models.py  settings.py  test_combinators.py  test_cte.py  test_django.py  test_django_fixes.py  test_manager.py  test_raw.py  test_recursive.py
tests/test_v1/: __init__.py  models.py  test_django.py  test_manager.py  test_recursive.py
