[project]
name = "django-cte"
description = "Common Table Expressions (CTE) for Django"
authors = [{name = "Daniel Miller", email = "millerdev@gmail.com"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">= 3.9"
# Python and Django versions are read from this file by GitHub Actions.
# Precise formatting is important.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Framework :: Django',
    'Framework :: Django :: 4',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5',
    'Framework :: Django :: 5.1',
    'Framework :: Django :: 5.2',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = ["django"]

[dependency-groups]
dev = [
    "psycopg2-binary",
    "pytest-unmagic",
    "ruff",
]

[project.urls]
Home = "https://github.com/dimagi/django-cte"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "django_cte"

[tool.distutils.bdist_wheel]
universal = true
