[bdist_wheel]
universal=1

[metadata]
name = django-cte
version = attr: django_cte.__version__
description=Common Table Expressions (CTE) for Django
long_description = file: README.md
long_description_content_type = text/markdown
maintainer =  Daniel Miller
maintainer_email = millerdev@gmail.com
license = BSD License
url = https://github.com/dimagi/django-cte
project_urls =
    Bug Tracker = https://github.com/dimagi/django-cte/issues
    Repository = https://github.com/dimagi/django-cte
    Documentation = https://github.com/dimagi/django-cte

classifiers =
        Development Status :: 3 - Alpha
        Environment :: Web Environment
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Framework :: Django
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Framework :: Django :: 4.0
        Framework :: Django :: 4.1
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
setup_requires =
  setuptools_scm
  packaging
install_requires =
    Django
